--- a/src/layouts/LayoutDocs.astro
+++ b/src/layouts/LayoutDocs.astro
@@ -18,7 +18,7 @@ const { frontmatter, url } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<!-- <link rel="canonical" href={new URL(url, Astro.site).pathname}> -->
 		<title>{frontmatter.title}</title>
